--- a/app/src/main/res/layout/clinic_signup_activity.xml
+++ b/app/src/main/res/layout/clinic_signup_activity.xml
@@ -62,7 +62,7 @@
                 android:id="@+id/imageView7"
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/user" />
+                app:srcCompat="@drawable/storefront" />
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/clinicNameInput"
@@ -179,7 +179,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_weight="1"
                 android:background="@drawable/roundedbutton"
-                android:onClick="clinicSignUp"
+                android:onClick="signUpClinic"
                 android:text="Register"
                 android:textColor="@color/colorPrimary" />
         </TableRow>
