--- a/app/src/main/res/drawable/welcomeview.xml
+++ b/app/src/main/res/drawable/welcomeview.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" android:padding="10dp">
+    <!-- you can use any color you want I used here gray color-->
+    <solid android:color="#D0E8F1"/>
+    <stroke android:color="#ffff"/>
+    <corners android:bottomRightRadius="45dp"/>
+    <corners android:bottomLeftRadius="45dp"/>
+    <corners android:topRightRadius="10dp"/>
+    <corners android:topLeftRadius="10dp"/>
+</shape>
