--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#EDF2FA</color>
-    <color name="colorPrimaryDark">#010419</color>
+    <color name="colorPrimaryDark">#01041B</color>
     <color name="colorAccent">#030c47</color>
 
     <color name="white">#edf2fa</color>
