--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,11 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="textInputStyle">@style/AppTextField</item>
+<!--        <item name="textInputStyle">@style/AppTextField</item>-->
     </style>
 
-    <style name="AppTextField" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+<!--    <style name="AppTextField" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">-->
 
-        <item name="boxBackgroundColor">@android:color/white</item></style>
+<!--        <item name="boxBackgroundColor">@android:color/white</item></style>-->
 
 </resources>
