--- a/app/src/main/res/layout/activity_update_service_admin_page.xml
+++ b/app/src/main/res/layout/activity_update_service_admin_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".addServiceAdminPage">
+    tools:context=".UpdateServiceAdminPage">
 
     <TextView
         android:id="@+id/addServiceText21"
@@ -18,14 +18,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/serviceName"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/serviceRename" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/serviceRename"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="36dp"
         android:layout_weight="0"
         android:backgroundTint="@color/colorPrimary"
         android:hint="Service Name"
@@ -35,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addServiceText" />
+        app:layout_constraintTop_toBottomOf="@+id/addServiceText1" />
 
     <TextView
         android:id="@+id/addServiceText1"
@@ -45,7 +44,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Add a Service"
+        android:text="Modify A Service"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
@@ -58,11 +57,12 @@
         android:id="@+id/serviceProviderLister"
         android:layout_width="409dp"
         android:layout_height="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/dropdownicon"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/serviceName" />
+        app:layout_constraintTop_toBottomOf="@+id/serviceRename" />
 
     <Button
         android:id="@+id/doneUpdatingButton"
@@ -72,7 +72,7 @@
         android:layout_marginBottom="64dp"
         android:layout_weight="1"
         android:background="@drawable/roundedbutton"
-        android:onClick="createService"
+        android:onClick="finishUpdating"
         android:text="Done"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
@@ -80,4 +80,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="304dp"
+        android:layout_height="49dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
+        android:layout_weight="1"
+        android:background="@drawable/loginbutton"
+        android:onClick="deleteService"
+        android:text="Delete"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/doneUpdatingButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
