--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -105,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:onClick="editServices"
             android:text="Edit Service"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp" />
