--- a/app/src/main/res/layout/activity_edit_patient_info_page.xml
+++ b/app/src/main/res/layout/activity_edit_patient_info_page.xml
@@ -5,39 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".AdminPages.UpdateServiceAdminPage">
+    tools:context=".AdminPages.UpdateUsersAdminPage">
 
     <TextView
-        android:id="@+id/addServiceText21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select a provider"
-        android:textColor="@color/colorPrimary"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/serviceProviderList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/serviceRename" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/serviceRename"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_weight="0"
-        android:backgroundTint="@color/colorPrimary"
-        android:hint="Service Name"
-        android:textColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addServiceText1" />
-
-    <TextView
-        android:id="@+id/addServiceText1"
+        android:id="@+id/modifyUserInfoTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -53,19 +24,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/serviceProviderLister"
-        android:layout_width="409dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/dropdownicon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/serviceRename" />
-
     <Button
-        android:id="@+id/doneUpdatingButton"
+        android:id="@+id/doneUpdatingButton3"
         android:layout_width="304dp"
         android:layout_height="49dp"
         android:layout_gravity="center"
@@ -82,20 +42,20 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/deleteButton"
+        android:id="@+id/deleteButton3"
         android:layout_width="304dp"
         android:layout_height="49dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:background="@drawable/loginbutton"
         android:onClick="deleteService"
         android:text="Delete"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/doneUpdatingButton"
+        app:layout_constraintBottom_toTopOf="@+id/doneUpdatingButton3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.963"
         app:layout_constraintStart_toStartOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
