--- a/app/src/main/res/layout/activity_update_services_provided.xml
+++ b/app/src/main/res/layout/activity_update_services_provided.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Edit Users"
+        android:text="Update Services"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
@@ -24,30 +24,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/userList"
-        android:layout_width="356dp"
-        android:layout_height="495dp"
-        android:layout_marginTop="84dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateServicesTitle" />
-
     <Switch
         android:id="@+id/userTypeSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:text="Patients"
+        android:layout_marginTop="20dp"
+        android:text="Available"
         android:textColor="#DDEBEB"
         android:textColorHighlight="#00F5ECEC"
         android:textColorHint="#F3EDED"
         android:textColorLink="#D8E9E9"
-        app:layout_constraintBottom_toTopOf="@+id/userList"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateServicesTitle" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/userList"
+        android:layout_width="364dp"
+        android:layout_height="497dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userTypeSwitch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
